<resources>
    //Estos son los textview de la pantalla principal//
    <string name="app_name">Capitales</string>
    <string name="tvCapitales">Capitales Del Mundo</string>
    <string name="tvNivel1">Nivel 1</string>
    <string name="tvNivel2">Nivel 2</string>
    <string name="tvNivel3">Nivel 3</string>
    <string name="tvTodasCapitales">Todas las Capitales</string>
    <string name="tvAprender">Aprender</string>
    <string name="tvValorar">Valorar</string>
    <string name="tvAjustes">Ajustes</string>
    <string name="tvApps">Otras Apps</string>
    <string name="tvRecordmultiple1">Record:</string>
    <string name="tvRecordfacil1">Record:</string>
    <string name="tvRecordseis1">Record:</string>
    <string name="tvRecordtiempo1">Record:</string>
    <string name="tvRecorddificil1">Record:</string>
    <string name="tvRecordmapa1">Record:</string>


    //Estos son los button de la pantalla principal//
    <string name="btnNiveluno"></string>
    <string name="btnNiveldos"></string>
    <string name="btnNiveltres"></string>
    <string name="btnAprender"></string>
    <string name="btnValorar"></string>
    <string name="btnAjustes"></string>
    <string name="btnApps"></string>

    //Estos son los textview y los button de la pantalla del nivel Uno//
    <string name="tvUno">Nivel 1</string>
    <string name="tvMultiple">Opcion Multiple</string>
    <string name="tvFacil">Prueba Facil</string>
    <string name="tvSeis">Seis</string>
    <string name="btnMultiple"></string>
    <string name="btnFacil"></string>
    <string name="btnSeis"></string>
    <string name="tvTiempo">Juego de Tiempo</string>
    <string name="tvDificil">Prueba Dificil</string>
    <string name="tvMapa">En el Mapa</string>
    <string name="btnTiempo"></string>
    <string name="btnDificil"></string>
    <string name="btnMapa"></string>

    //Estos son los textview y los button de la pantalla Multiple del nivel Uno//
    <string name="tvTitulo">Atenas</string>
    <string name="imgGracia"></string>
    <string name="BtnMult1">Italia</string>
    <string name="BtnMult2">Grecia</string>
    <string name="BtnMult3">Panama</string>
    <string name="BtnMult4">Japon</string>

    //Estos son los textview y los button de la pantalla del nivel Dos//
    <string name="tvNiveldos">Nivel 2</string>
    <string name="tvMultipledos">Opcion Multiple</string>
    <string name="tvFacildos">Prueba Facil</string>
    <string name="tvSeisdos">Seis</string>
    <string name="btnMultiple2"></string>
    <string name="btnFcail2"></string>
    <string name="btnSeis2"></string>
    <string name="tvTiempodos">Juego de Tiempo</string>
    <string name="tvDificildos">Prueba Dificil</string>
    <string name="tvMapados">En el Mapa</string>
    <string name="btnTiempo2"></string>
    <string name="btnDificil2"></string>
    <string name="btnMapa2"></string>

    //Estos son los textview de la pantalla del nivel Tres//
    <string name="tvNiveltres">Nivel 3</string>
    <string name="tvMultipletres">Opcion Multiple</string>
    <string name="tvFaciltres">Nivel Facil</string>
    <string name="tvSeistres">Seis</string>
    <string name="tvTiempotres">Juego de Tiempo</string>
    <string name="tvDificiltres">Nivel Dificil</string>
    <string name="tvMapatres">En el Mapa</string>

    //Estos son los button de la pantalla del nivel Tres//
    <string name="BtnMultipletres"></string>
    <string name="BtnFaciltres"></string>
    <string name="BtnSeistres"></string>
    <string name="BtnTiempotres"></string>
    <string name="BtnDificiltres"></string>
    <string name="BtnMapatres"></string>

    //Estos son los textview y los button de la pantalla Prueba Facil del nivel Uno//
    <string name="tvTitulofacil1">La Capital de India</string>
    <string name="imgFacil1"></string>
    <string name="BtnFacil1"></string>
    <string name="BtnFacil2"></string>
    <string name="BtnFacil3"></string>
    <string name="BtnFacil4"></string>
    <string name="BtnFacil5"></string>
    <string name="BtnFacil6"></string>
    <string name="BtnFacil7"></string>
    <string name="BtnFacil8"></string>
    <string name="BtnFacil9"></string>
    <string name="BtnFacil10"></string>
    <string name="BtnFacilonce"></string>

    //Estos son los textview de la pantalla Seis del nivel Uno//
    <string name="tvSeisnivel1">Belgica</string>
    <string name="tv1Seis1">Bruselas</string>
    <string name="tv2Seis1">Delhi</string>
    <string name="tv3Seis1">Caracas</string>
    <string name="tv4Seis1">Madrid</string>
    <string name="tv5Seis1">Paris</string>
    <string name="tv6Seis1">Ottawa</string>
    //Estos son los buttons de la pantalla Seis del nivel Uno//
    <string name="btn1Seis1"></string>
    <string name="btn2Seis1"></string>
    <string name="btn3Seis1"></string>
    <string name="btn4Seis1"></string>
    <string name="btn5Seis1"></string>
    <string name="btn6Seis1"></string>
    //Estos son los textview de la pantalla Juego de tiempo del nivel Uno//
    <string name="tvTitulotiempo1">Portugal</string>
    <string name="imgCapitaltiempo1"></string>
    //Estos son los buttons de la pantalla Juego de tiempo del nivel Uno//
    <string name="btn1Tiempo1"></string>
    <string name="btn2Tiempo1"></string>
    <string name="btn3Tiempo1"></string>
    <string name="btn4Tiempo1"></string>

    //Estos son los textview y los button de la pantalla Prueba Dificil del nivel Uno//
    <string name="tvTituloDificil1">La Capital de Francia</string>
    <string name="imgDificil1"></string>
    <string name="BtnDificil1"></string>
    <string name="BtnDificil12"></string>
    <string name="BtnDificil3"></string>
    <string name="BtnDificil4"></string>
    <string name="BtnDificil5"></string>
    <string name="BtnDificil6"></string>
    <string name="BtnDificil7"></string>
    <string name="BtnDificil8"></string>
    <string name="BtnDificil9"></string>
    <string name="BtnDificil10"></string>
    <string name="BtnDificil11"></string>

    //Estos son los textview y los button de la pantalla En el mapa del nivel Uno//
    <string name="imgvMapanivel1"></string>
    <string name="BtnMapa1"></string>
    <string name="BtnMapa2"></string>
    <string name="BtnMapa3"></string>
    <string name="BtnMapa4"></string>

    //Estos son los textview y los button de la pantalla Prueba Facil del nivel Uno//
    <string name="tvTitmultiplenivel2">Nepal</string>
    <string name="imgvMultnivel2"></string>
    <string name="btn1Multnivel2"></string>
    <string name="btn2Multnivel2"></string>
    <string name="btn3Multnivel2"></string>
    <string name="btn4Multnivel2"></string>

    //Estos son los textview de la pantalla Seis del nivel Dos//
    <string name="tvSeisnivel2">Holanda</string>
    <string name="tv1Seis2">Amsterdam</string>
    <string name="tv2Seis2">Tegucigalpa</string>
    <string name="tv3Seis2">Santo Domingo</string>
    <string name="tv4Seis2">Panama</string>
    <string name="tv5Seis5">San Jose</string>
    <string name="tv6Seis6">Bogota</string>
    //Estos son los buttons de la pantalla Seis del nivel Dos//
    <string name="btn1Seis2"></string>
    <string name="btn2Seis2"></string>
    <string name="btn3Seis2"></string>
    <string name="btn4Seis2"></string>
    <string name="btn5Seis2"></string>
    <string name="btn6Seis2"></string>
    //Estos son los textview de la pantalla Juego de tiempo del nivel Dos//
    <string name="tvTtiempo2">Suiza</string>
    <string name="imgCapitaltiempo2"></string>
    //Estos son los buttons de la pantalla Juego de tiempo del nivel Dos//
    <string name="btn1Tiempo2"></string>
    <string name="btn2Tiempo2"></string>
    <string name="btn3Tiempo2"></string>
    <string name="btn4Tiempo2"></string>
    //Estos son los textview y los button de la pantalla Prueba Facil del nivel Dos//
    <string name="tvTfacil2">La Capital de Irak</string>
    <string name="imgFacil2"></string>
    <string name="Btn1Facil2"></string>
    <string name="Btn2Facil2"></string>
    <string name="Btn3Facil2"></string>
    <string name="Btn4Facil2"></string>
    <string name="Btn5Facil2"></string>
    <string name="Btn6Facil2"></string>
    <string name="Btn7Facil2"></string>
    <string name="Btn8Facil2"></string>
    <string name="Btn9Facil2"></string>
    <string name="Btn10Facil2"></string>
    <string name="Btn11Facil2"></string>
    <string name="Btn12Facil2"></string>
    <string name="Btn13Facil2"></string>

    //Estos son los textview y los button de la pantalla Prueba Facil del nivel Dos//
    <string name="tvTdificil2">La Capital de Noruega</string>
    <string name="imgDificil2"></string>
    <string name="Btn1Dificil2"></string>
    <string name="Btn2Dificil2"></string>
    <string name="Btn3Dificil2"></string>
    <string name="Btn4Dificil2"></string>
    <string name="Btn5Dificil2"></string>
    <string name="Btn6Dificil2"></string>
    <string name="Btn7Dificil2"></string>
    <string name="Btn8Dificil2"></string>
    <string name="Btn9Dificil2"></string>
    <string name="Btn10Dificil2"></string>

    //Estos son los textview y los button de la pantalla En el mapa del nivel Dos//
    <string name="imgMapanivel2"></string>
    <string name="Btn1Mapa2"></string>
    <string name="Btn2Mapa2"></string>
    <string name="Btn3Mapa2"></string>
    <string name="Btn4Mapa2"></string>

    //Estos son los textview y los button de la pantalla En el mapa del nivel Dos//
    <string name="btnNivelprueba"></string>


</resources>
