<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeisNivel2">

    <TextView
        android:id="@+id/tvSeisnivel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tvSeisnivel2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:text="@string/tv1Seis2"
        app:layout_constraintEnd_toStartOf="@+id/tv2Nivel2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeisnivel2" />

    <TextView
        android:id="@+id/tv2Nivel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:text="@string/tv2Seis2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/tvSeisnivel2" />

    <TextView
        android:id="@+id/tv3Nivel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="90dp"
        android:text="@string/tv3Seis2"
        app:layout_constraintEnd_toStartOf="@+id/tv4Nivel2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1Seis2" />

    <TextView
        android:id="@+id/tv4Nivel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="80dp"
        android:text="@string/tv4Seis2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv3Nivel2"
        app:layout_constraintTop_toBottomOf="@+id/btn2Seis2" />

    <TextView
        android:id="@+id/tv5Nivel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="90dp"
        android:text="@string/tv5Seis5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3Seis2" />

    <TextView
        android:id="@+id/tv6Nivel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="80dp"
        android:text="@string/tv6Seis6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv5Nivel2"
        app:layout_constraintTop_toBottomOf="@+id/btn4Seis2" />

    <Button
        android:id="@+id/btn1Seis2"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btn1Seis2"
        app:layout_constraintEnd_toStartOf="@+id/btn2Seis2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/btn3Seis2"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btn3Seis2"
        app:layout_constraintEnd_toStartOf="@+id/btn4Seis2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv3Nivel2" />

    <Button
        android:id="@+id/btn5Seis2"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btn5Seis2"
        app:layout_constraintEnd_toStartOf="@+id/btn6Seis2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv5Nivel2" />

    <Button
        android:id="@+id/btn6Seis2"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="36dp"
        android:text="@string/btn6Seis2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn5Seis2"
        app:layout_constraintTop_toBottomOf="@+id/tv6Nivel2" />

    <Button
        android:id="@+id/btn4Seis2"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="36dp"
        android:text="@string/btn4Seis2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn3Seis2"
        app:layout_constraintTop_toBottomOf="@+id/tv4Nivel2" />

    <Button
        android:id="@+id/btn2Seis2"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="36dp"
        android:text="@string/btn2Seis2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn1Seis2"
        app:layout_constraintTop_toBottomOf="@+id/tv2Nivel2" />

</android.support.constraint.ConstraintLayout>