<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FacilNivel2">

    <TextView
        android:id="@+id/tvTfacil2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="140dp"
        android:text="@string/tvTfacil2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgFacil2"
        android:layout_width="400dp"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imgFacil2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTfacil2"
        app:srcCompat="@drawable/bagdad" />

    <Button
        android:id="@+id/btn1Facil2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/Btn1Facil2"
        app:layout_constraintEnd_toStartOf="@+id/btn2Facil2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFacil2" />

    <Button
        android:id="@+id/btn2Facil2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Btn2Facil2"
        app:layout_constraintEnd_toStartOf="@+id/btn3Facil2"
        app:layout_constraintStart_toEndOf="@+id/btn1Facil2"
        app:layout_constraintTop_toBottomOf="@+id/imgFacil2" />

    <Button
        android:id="@+id/btn3Facil2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Btn3Facil2"
        app:layout_constraintEnd_toStartOf="@+id/btn4Facil2"
        app:layout_constraintStart_toEndOf="@+id/btn2Facil2"
        app:layout_constraintTop_toBottomOf="@+id/imgFacil2" />

    <Button
        android:id="@+id/btn4Facil2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Btn4Facil2"
        app:layout_constraintEnd_toStartOf="@+id/btn5Facil2"
        app:layout_constraintStart_toEndOf="@+id/btn3Facil2"
        app:layout_constraintTop_toBottomOf="@+id/imgFacil2" />

    <Button
        android:id="@+id/btn5Facil2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Btn5Facil2"
        app:layout_constraintEnd_toStartOf="@+id/btn6Facil2"
        app:layout_constraintStart_toEndOf="@+id/btn4Facil2"
        app:layout_constraintTop_toBottomOf="@+id/imgFacil2" />

    <Button
        android:id="@+id/btn6Facil2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Btn6Facil2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn5Facil2"
        app:layout_constraintTop_toBottomOf="@+id/imgFacil2" />

    <Button
        android:id="@+id/btn7Facil2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Btn7Facil2"
        app:layout_constraintEnd_toStartOf="@+id/btn8Facil2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1Facil2" />

    <Button
        android:id="@+id/btn8Facil2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/Btn8Facil2"
        app:layout_constraintEnd_toStartOf="@+id/btn9Facil2"
        app:layout_constraintStart_toEndOf="@+id/btn7Facil2"
        app:layout_constraintTop_toBottomOf="@+id/btn1Facil2" />

    <Button
        android:id="@+id/btn9Facil2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/Btn9Facil2"
        app:layout_constraintEnd_toStartOf="@+id/btn10Facil2"
        app:layout_constraintStart_toEndOf="@+id/btn8Facil2"
        app:layout_constraintTop_toBottomOf="@+id/btn2Facil2" />

    <Button
        android:id="@+id/btn10Facil2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/Btn10Facil2"
        app:layout_constraintEnd_toStartOf="@+id/btn11Facil2"
        app:layout_constraintStart_toEndOf="@+id/btn9Facil2"
        app:layout_constraintTop_toBottomOf="@+id/btn3Facil2" />

    <Button
        android:id="@+id/btn11Facil2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/Btn11Facil2"
        app:layout_constraintEnd_toStartOf="@+id/btn12Facil2"
        app:layout_constraintStart_toEndOf="@+id/btn10Facil2"
        app:layout_constraintTop_toBottomOf="@+id/btn4Facil2" />

    <Button
        android:id="@+id/btn12Facil2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/Btn12Facil2"
        app:layout_constraintEnd_toStartOf="@+id/btn13Facil2"
        app:layout_constraintStart_toEndOf="@+id/btn11Facil2"
        app:layout_constraintTop_toBottomOf="@+id/btn5Facil2" />

    <Button
        android:id="@+id/btn13Facil2"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/Btn13Facil2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn12Facil2"
        app:layout_constraintTop_toBottomOf="@+id/btn6Facil2" />
</android.support.constraint.ConstraintLayout>